force-app/main/default/objects/Company__c/fields/Maximum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount__c</fullName>
    <label>Maximum Amount</label>
    <summarizedField>Employee__c.Salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>