force-app/main/default/objects/Company__c/fields/Minimum_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount__c</fullName>
    <label>Minimum Amount</label>
    <summarizedField>Employee__c.Salary__c</summarizedField>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>