force-app/main/default/objects/Company__c/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Company_Phone__c)),
    NOT(REGEX(Company_Phone__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Phone numbers should be in this format.</errorMessage>
</ValidationRule>