force-app/main/default/objects/Company__c/listViews/Test_Queue_Company.listView-meta.xml
<ListView>
    <fullName>Test_Queue_Company</fullName>
    <filterScope>Queue</filterScope>
    <label>Test Queue</label>
    <queue>Test_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>